image and link update

--- a/faculty.html
+++ b/faculty.html
@@ -211,7 +211,7 @@
         <li>DTC 499 Special Problems</li>
         </ul>
         <h3 id="toc_14">Chris Dreger, MFA</h3>
-        <!--<img id="img9" src="img/chris.jpg" alt="Portrait of Chris Dreger">-->
+        <img id="img9" src="img/chris.png" alt="Portrait of Chris Dreger">
         <p>Visiting Lecturer</p>
         <p><a href="mailto:christopher.dreger@wsu.edu">christopher.dreger@wsu.edu</a></p>
         <p><a href="http://www.chrisdreger.com/">http://www.chrisdreger.com/</a></p>
