--- a/program-info.html
+++ b/program-info.html
@@ -145,7 +145,7 @@
         <p>Modern digital professionals use a variety of tools to accomplish their work and are constantly learning new ones! Here are a few of the most prominent that you will use in the program, but this is by no means an exhaustive list. </p>
         <h3 id="toc_2">Sublime Text - <a href="https://www.sublimetext.com/">https://www.sublimetext.com/</a></h3>
         <p>Sublime Text is a text editor that you’ll use frequently throughout your time in the DTC program. It is where you’ll learn to use HTML, CSS, and JavaScript. If your goal is to be a web developer, this is the tool you’ll use the most.</p>
-        <h3 id="toc_3">Adobe Creative Suite - https://www.adobe.com/creativecloud.html</h3>
+        <h3 id="toc_3">Adobe Creative Suite - <a href="https://www.adobe.com/creativecloud.html">https://www.adobe.com/creativecloud.html</h3></a>
         <p>As design is a large part of the major, the Adobe Creative Cloud is a place where you’ll spend a lot of your time. Programs such as Photoshop, Illustrator, Premiere, After Effects, and XD will be used in various classes and projects along your journey. </p>
         <h3 id="toc_4">Unreal Engine/Twine - <a href="https://www.unrealengine.com/en-US"> https://www.unrealengine.com </a> , <a href="https://twinery.org/">https://twinery.org/</a></h3>
         <p>In certain game development classes you will be exposed to certain engines in order to create and modify games. As a game designer and developer, these engines will provide the basis of your knowledge in the gaming industry. </p>
