Minor changes to nav bars
This should be the last changes to the nav stuff

--- a/program-info.html
+++ b/program-info.html
@@ -75,6 +75,7 @@
       <button class="accordion" id="supe">Superpowers</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="superpowers.html#toc_0"><li>What are Superpowers</li></a>
           <a href="superpowers.html#toc_0"><li>Web Development</li></a>
           <a href="superpowers.html#toc_5"><li>Audio/Video</li></a>
           <a href="superpowers.html#toc_8"><li>Multimedia Design</li></a>
@@ -90,6 +91,7 @@
       <button class="accordion" id="seni">Senior Seminar</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="senior-seminar.html#seni"><li>The Seminar</li></a>
           <a href="senior-seminar.html#toc_0"><li>Structure</li></a>
           <a href="senior-seminar.html#toc_8"><li>Teams</li></a>
           <a href="senior-seminar.html#toc_13"><li>What team will you be on?</li></a>
