--- a/campus-support.html
+++ b/campus-support.html
@@ -78,6 +78,7 @@
       <button class="accordion" id="supe">Superpowers</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="superpowers.html#supe"><li>What are Superpowers?</li></a>
           <a href="superpowers.html#toc_0"><li>Web Development</li></a>
           <a href="superpowers.html#toc_5"><li>Audio/Video</li></a>
           <a href="superpowers.html#toc_8"><li>Multimedia Design</li></a>
@@ -90,9 +91,10 @@
         </ul>
       </div>
 
-      <button class="accordion" id="seni" onclick="window.location.href='senior-seminar.html';">Senior Seminar</button>
+      <button class="accordion" id="seni">Senior Seminar</button>
       <div class="panel" id="panel2" style="display: none;">
         <ul>
+          <a href="senior-seminar.html#toc_0"><li>The Seminar</li></a>
           <a href="senior-seminar.html#toc_0"><li>Structure</li></a>
           <a href="senior-seminar.html#toc_8"><li>Teams</li></a>
           <a href="senior-seminar.html#toc_13"><li>What team will you be on?</li></a>
