--- a/credits.html
+++ b/credits.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>DTC Handbook - Campus Support</title>
+<title>DTC Handbook| Credits</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
