--- a/senior-seminar.html
+++ b/senior-seminar.html
@@ -4,7 +4,7 @@
 <head>
 
 <meta charset="utf-8">
-<title>DTC Handbook - Campus Support</title>
+<title>DTC Handbook| Senior Seminar</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
