--- a/faculty.html
+++ b/faculty.html
@@ -153,7 +153,7 @@
         <p>Professor, Career Track</p>
         <p><a href="mailto:jfbarber@wsu.edu">jfbarber@wsu.edu</a></p>
         <p><a href="http://www.nouspace.net/john">http://www.nouspace.net/john</a></p>
-        <p>Dr. John Barber specializes in usability, accessibility, and how we use technology as tools to solve real world problems. Dr Barber is not only a professor within the program, he is a student mentor and an artist. Dr. Barber is working on some on-going research projects regarding sound based mediums. Check out <em>Reimagined Radio</em> at <a href="http://www.reimaginedradio.net/index.html">http://www.reimaginedradio.net/index.html</a>.</p>
+        <p>Dr. John Barber specializes in usability, accessibility, and how we use technology as tools to solve real world problems. Dr. Barber is not only a professor within the program, he is a student mentor and an artist. Dr. Barber is working on some on-going research projects regarding sound based mediums. Check out <em>Reimagined Radio</em> at <a href="http://www.reimaginedradio.net/index.html">http://www.reimaginedradio.net/index.html</a>.</p>
         <h4 id="toc_5">Areas of Expertise:</h4>
         <p>Radio Art, Usability Studies, Digital Storytelling</p>
         <h4 id="toc_6">Classes:</h4>
@@ -185,7 +185,7 @@
         <p>Assoc. Prof., Career Track</p>
         <p><a href="mailto:michael.rabby@wsu.edu">michael.rabby@wsu.edu</a></p>
         <p><a href="https://twitter.com/michaelrabby">https://twitter.com/michaelrabby</a></p>
-        <p>Professor Rabby is the head of the Social Media Certificate program, and teaches most of the courses involved with it. Being incredibly involved in the social media marketing space in the Portland/Vancouver area, his lectures translate to the workfield very well. If he isn’t talking about the Houston Astros, reality TV, or shopping malls, he’s teaching you about how to be a social media expert.</p>
+        <p>Professor Rabby is the head of the Social Media Certificate program, and teaches most of the courses involved with it. Being incredibly involved in the social media marketing space in the Portland/Vancouver area, his lectures translate to the field very well. If he isn’t talking about the Houston Astros, reality TV, or shopping malls, he’s teaching you about how to be a social media expert.</p>
         <h4 id="toc_9">Areas of Expertise:</h4>
         <p>Social Media, Media Communication, Quantitative Research</p>
         <h4 id="toc_10">Classes:</h4>
@@ -202,7 +202,7 @@
         <p><a href="http://brendajeangrell.com/">http://brendajeangrell.com/</a></p>
         <p>Professor Brenda Grell instructs all about multimedia design as well as 2D and 3D animation. She is super helpful and supportive when you get stuck on a project, and is overall a pleasure to work with. If you’re in the DTC program, you’re likely going to have one or two classes with Brenda, and they will be some of the best classes you take!</p>
         <h4 id="toc_12"><code></code>Areas of Expertise:</h4>
-        <p>2 &amp; 3D Animation, Video, Multimedia Design</p>
+        <p>2D &amp; 3D Animation, Video, Multimedia Design</p>
         <h4 id="toc_13">Classes:</h4>
         <ul>
         <li>DTC 201 Tools and Methods for Digital Technology</li>
@@ -248,11 +248,10 @@
         <p>Hypertext Theory, Media Studies</p>
         <h4 id="toc_22">Classes:</h4>
         <ul>
-        <li>DTC 475 Digital Diversity Ed McDonald, MFA
-        Adjunct Professor</li>
+        <li>DTC 475 Digital Diversity</li>
         </ul>
         <h3 id="toc_23">Ed McDonald, MFA</h3>
-        <p>Adjust Professor</p>
+        <p>Adjunct Professor</p>
         <p><a href="mailto:edward.mcdonald@wsu.edu">edward.mcdonald@wsu.edu</a></p>
         <p><a href="https://linkedin.com/in/edward-mcdonald-93956124">https://linkedin.com/in/edward-mcdonald-93956124</a></p>
         <p>Professor Ed McDonald is one of two professors who you will likely start the program with by taking DTC 101. He is incredibly passionate about digital technology and the history behind it. Besides him talking about the electronic music scene in Detroit or the wonders of pub culture in the UK, he’s lecturing about the importance of the foundations of digital technology and culture.</p>
