--- a/program-info.html
+++ b/program-info.html
@@ -139,7 +139,7 @@
         <img id="img1" src="img/students-in-lab_cropped.jpg" alt="Students working together in computer lab">
         <p>The Digital Technology and Culture program was started at WSU Vancouver. The program is one of five signature programs on the Vancouver campus. It integrates research and teaching in an intellectually-diverse, technologically innovative experience, applying inter-and transdisciplinary approaches that foster civic engagement from local-to-global contexts in the areas of Digital Humanities, media art, media communication, media studies, information systems.</p>
         <p>The program offers six specialties that include Game Studies &amp; Design; Web &amp; Mobile Design &amp; Development; 2 &amp; 3D Animation for Simulation &amp; Visualization; Digital Publishing; Physical Computing; &amp; Social Media / SEO.</p>
-        <p>Sitting at the intersection of art, technology and the humanities the CMDC program provides a well-rounded education in culture as well as technology.</p>
+        <p>Sitting at the intersection of art, technology and the humanities the DTC program provides a well-rounded education in culture as well as technology.</p>
         <p>In the DTC program you’ll focus on the relationship between technology and humanity, integrating critical thinking, creativity and computing skills with coursework in the arts, humanities, social sciences, management information systems and computer science. </p>
         <p>The broad-based, interdisciplinary DTC degree prepares you for a culturally diverse, technologically complex 21st century.</p>
         <h2 id="toc_1" class="program-info">Tools</h2>
@@ -161,9 +161,9 @@
         <p>Maya is also used for 3D animation. It is used to create assets for interactive 3D applications, animated films, TV series, and visual effects. You would use this program if you’re interested in animation. </p>
         <p>VMMC 111 has computers equipped with the Adobe Creative Suite, Maya, Unity, Unreal Engine, Blender, and other software. The classroom is an open lab for students to use outside of the class hours that are posted on the door outside.</p>
         <h2 id="toc_9" class="program-info">DTC Specialty Road Maps</h2>
-        <p>The DTC degree can be tailored to many specialties, here a few paths through the program that have been customized for specific interests and skills.</p>
+        <p>The DTC degree can be tailored to many specialties; here a few paths through the program that have been customized for specific interests and skills.</p>
         <h3 id="toc_10">Web / App Production &amp; Development</h3>
-        <p>Plans and codes websites that are both intuitive and insightful; plans and develops strategies for navigation; establishes links between collections of information in order to promote their effective utilization by users</p>
+        <p>Plans and codes websites that are both intuitive and insightful; plans and develops strategies for navigation; establishes links between collections of information in order to promote their effective utilization by users.</p>
         <p>DTC 336 Design and Composition</p>
         <p>DTC 355 Multimedia Authoring</p>
         <p>DTC 477 Advanced Multimedia Authoring</p>
@@ -231,7 +231,7 @@
         <p>+ DTC 478 Usability &amp; Interface Design</p>
         <h2 id="toc_17" class="program-info">Student Experiences in DTC</h2>
         <img id="img3" src="img/students-in-quad_cropped.jpg" alt="Students walking in the WSUV quad">
-        <h3 id="toc_18">While in the CMDC program what is a DTC course that you have taken that you have enjoyed?</h3>
+        <h3 id="toc_18">While in the DTC program what is a DTC course that you have taken that you have enjoyed?</h3>
         <p>“DTC 355 Advanced Digital Cinema.” - Charlotte Royal</p>
         <p>“DTC 492 Engines and Platforms.” - Andrew Hansen</p>
         <p>“DTC 354 Digital Storytelling.” - Cody Armstrong</p>
