--- a/program-info.html
+++ b/program-info.html
@@ -240,7 +240,7 @@
         <p>“How to use games engines and intermediate-level code to create video games.” - Andrew Hansen</p>
         <p>“I learned how to tell compelling stories through various mediums. This was an insightful class that challenged the idea of story telling in an evolving digital world. The class presented Tumblr, WordPress, Tik Tok and many other options to tell their stories.” - Cody Armstrong</p>
         <h3 id="toc_20">What kinds of skills do you believe you gained while taking this course?</h3>
-        <p>”Lots of video editing on Premier. General videography, how to set up scenes, and creating storyboards. We also learned about many tricks and methods that are used in many famous movies.” - Charlotte Royal</p>
+        <p>“Lots of video editing on Premier. General videography, how to set up scenes, and creating storyboards. We also learned about many tricks and methods that are used in many famous movies.” - Charlotte Royal</p>
         <p>“How to work within a game engine, apply assets to create and control animations, programs mechanics and functionality, and work collaboratively in groups towards a creative vision.” - Andrew Hansen</p>
         <p>“I developed more range of story telling and how to utilize several different methods of delivery of my stories. This class will also teach students how to delve deeper into creative writing and story telling.” - Cody Armstrong</p>
         <h3 id="toc_21">What kinds of students would you recommend this course to?</h3>
