--- a/faculty.html
+++ b/faculty.html
@@ -139,7 +139,7 @@
         <p>Director &amp; Professor</p>
         <p><a href="mailto:dgrigar@wsu.edu">dgrigar@wsu.edu</a></p>
         <p><a href="http://www.nouspace.net/dene">http://www.nouspace.net/dene</a></p>
-        <p>Dene (pronounced Dee-Knee) Grigar is the head of the DTC program. She is incredibly passionate about preserving digital literature and devices, specifically through her work on the <a href="https://dtc-wsuv.org/wp/ell">Electronic Literature Lab</a>. Towards the end of your time at WSUV, you will meet with Dene about the Senior Seminar capstone course. It may seem daunting when you get there, but Dene is super supportive and excited for you to be a part of something great!</p>
+        <p>Dene (pronounced Dee-Knee) Grigar is the director of the CMDC in the Department of Digital Technology & Culture. She is incredibly passionate about preserving digital literature and devices, specifically through her work on the <a href="https://dtc-wsuv.org/wp/ell">Electronic Literature Lab</a>. Towards the end of your time at WSUV, you will meet with Dene about the Senior Seminar capstone course. It may seem daunting when you get there, but Dene is super supportive and excited for you to be a part of something great!</p>
         <h4 id="toc_2">Areas of Expertise:</h4>
         <p>Digital Curation &amp; Preservation, Multimedia Design, Project Management</p>
         <h4 id="toc_3">Classes:</h4>
@@ -168,7 +168,7 @@
         <p>Assoc. Prof., Career Track</p>
         <p><a href="mailto:wluers@wsu.edu">wluers@wsu.edu</a></p>
         <p><a href="http://will-luers.com/">http://will-luers.com/</a></p>
-        <p>Will Luers was hand-selected by Dene Grigar for “Narrative Walks,” a class taught using google maps images and was hired on part-time. Over time, Dr. Grigar pushed Will to come into the CMDC/DTC program full-time. Prof. Luers will be your guide through specialized projects that include video production, narratives, website building, and digital publishing. These projects are the key to your portfolio.</p>
+        <p>Will Luers was hand-selected by Dene Grigar for “Narrative Walks,” a class taught using google maps images and was hired on part-time. Over time, Dr. Grigar pushed Will to come into the DTC program full-time. Prof. Luers will be your guide through specialized projects that include video production, narratives, website building, and digital publishing. These projects are the key to your portfolio.</p>
         <h4 id="toc_8">Areas of Expertise:</h4>
         <p>Digital Publishing, Web &amp; Mobile Design, Video, Digital Storytelling</p>
         <h4 id="toc_9">Classes:</h4>
