condensed links in program info section

--- a/program-info.html
+++ b/program-info.html
@@ -145,19 +145,19 @@
         <h2 id="toc_1" class="program-info">Tools</h2>
         <img id="tools" src="img/Tools_cropped.png">
         <p>Modern digital professionals use a variety of tools to accomplish their work and are constantly learning new ones! Here are a few of the most prominent that you will use in the program, but this is by no means an exhaustive list. </p>
-        <h3 id="toc_2">Sublime Text - <a href="https://www.sublimetext.com/">https://www.sublimetext.com/</a></h3>
+        <h3 id="toc_2">Sublime Text - <a href="https://www.sublimetext.com/">sublimetext.com</a></h3>
         <p>Sublime Text is a text editor that you’ll use frequently throughout your time in the DTC program. It is where you’ll learn to use HTML, CSS, and JavaScript. If your goal is to be a web developer, this is the tool you’ll use the most.</p>
-        <h3 id="toc_3">Adobe Creative Suite - <a href="https://www.adobe.com/creativecloud.html">https://www.adobe.com/creativecloud.html</h3></a>
+        <h3 id="toc_3">Adobe Creative Suite - <a href="https://www.adobe.com/creativecloud.html">adobe.com</h3></a>
         <p>As design is a large part of the major, the Adobe Creative Cloud is a place where you’ll spend a lot of your time. Programs such as Photoshop, Illustrator, Premiere, After Effects, and XD will be used in various classes and projects along your journey. </p>
-        <h3 id="toc_4">Unreal Engine/Twine - <a href="https://www.unrealengine.com/en-US"> https://www.unrealengine.com </a> , <a href="https://twinery.org/">https://twinery.org/</a></h3>
+        <h3 id="toc_4">Unreal Engine/Twine - <a href="https://www.unrealengine.com/en-US">unrealengine.com</a> , <a href="https://twinery.org/">twinery.org</a></h3>
         <p>In certain game development classes you will be exposed to certain engines in order to create and modify games. As a game designer and developer, these engines will provide the basis of your knowledge in the gaming industry. </p>
-        <h3 id="toc_5">Basecamp - <a href="https://basecamp.com/">https://basecamp.com/</a></h3>
+        <h3 id="toc_5">Basecamp - <a href="https://basecamp.com/">basecamp.com</a></h3>
         <p>Basecamp is where you can submit and check out other students&#39; work. It&#39;s a collaborative tool that is similar to Canvas that the DTC program uses exclusively. </p>
-        <h3 id="toc_6">Slack - <a href="https://slack.com/">https://slack.com/</a></h3>
+        <h3 id="toc_6">Slack - <a href="https://slack.com/">slack.com</a></h3>
         <p>Slack is where you’ll communicate to your professors and fellow students. Slack is useful for splitting students into smaller groups and creating a chat channel of group activities. It’s also a great way to see what&#39;s happening within the DTC program.  </p>
-        <h3 id="toc_7">Blender - <a href="https://www.blender.org/">https://www.blender.org/</a></h3>
+        <h3 id="toc_7">Blender - <a href="https://www.blender.org/">blender.org</a></h3>
         <p>Blender is a free and open-source 3D computer graphics software tool set used for creating animated films, visual effects, art, 3D-printed models, motion graphics, interactive 3D applications, virtual reality, and, formerly, video games.</p>
-        <h3 id="toc_8">Maya - <a href="https://www.autodesk.com/products/maya/overview"> https://www.autodesk.com</a> </h3>
+        <h3 id="toc_8">Maya - <a href="https://www.autodesk.com/products/maya/overview">autodesk.com</a> </h3>
         <p>Maya is also used for 3D animation. It is used to create assets for interactive 3D applications, animated films, TV series, and visual effects. You would use this program if you’re interested in animation. </p>
         <p>VMMC 111 has computers equipped with the Adobe Creative Suite, Maya, Unity, Unreal Engine, Blender, and other software. The classroom is an open lab for students to use outside of the class hours that are posted on the door outside.</p>
         <h2 id="toc_9" class="program-info">DTC Specialty Road Maps</h2>
